--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./assets/img/iconGoomba.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/iconGoomba.jpg" type="image/x-icon">
   <!-- CSS only -->
  <link rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css">
   <title>Goomba</title>
